--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mini-css-extract-plugin": "^2.7.3",
     "postcss-loader": "^7.0.2",
     "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.12.0"
   },
   "dependencies": {
     "core-js": "^3.29.1"
